--- a/.emacs.d/my-init.org
+++ b/.emacs.d/my-init.org
@@ -1,17 +1,21 @@
-* Package setup
+* Package setup and bootstrap use-package
 #+BEGIN_SRC emacs-lisp
 (require 'package)
 (setq package-archives
       '(("gnu" . "http://elpa.gnu.org/packages/")
-	("melpa" . "http://melpa.org/packages/")))
-(package-initialize)
-#+END_SRC
+        ("melpa" . "http://melpa.org/packages/")
+	("melpa-stb" . "https://stable.melpa.org/packages/")))
 
-* use-package bootstrap
-#+BEGIN_SRC emacs-lisp
-  (unless (package-installed-p 'use-package)
-    (package-refresh-content)
-    (package-install 'use-package))
+(package-initialize)
+
+(unless (require 'use-package nil t)
+  (if (not (yes-or-no-p (concat "Refresh packages, install use-package and"
+                                " other packages used by init file? ")))
+      (error "you need to install use-package first")
+    (package-refresh-contents)
+    (package-install 'use-package)
+    (require 'use-package)
+    (setq use-package-always-ensure t)))
 #+END_SRC
 
 * which-key
@@ -24,25 +28,16 @@
 
 * vterm
 #+BEGIN_SRC emacs-lisp
-  (use-package vterm-toggle
-     :requires (vterm))
   (use-package vterm
-    :bind ("C-`" . vterm-toggle-cd)
-    :custom (vterm-shell "/usr/bin/fish")
-            (vterm-kill-buffer-on-exit t)
-	    (vterm-toggle-reset-window-configuration-after-exit t)
-	    (vterm-toggle-use-dedicated-buffer t))
+    :custom
+    (vterm-shell "/usr/bin/fish")
+    (vterm-kill-buffer-on-exit t))
 
-(setq vterm-toggle-fullscreen-p nil)
-(add-to-list 'display-buffer-alist
-             '((lambda(bufname _) (with-current-buffer bufname (equal major-mode 'vterm-mode)))
-                (display-buffer-reuse-window display-buffer-at-bottom)
-                ;;(display-buffer-reuse-window display-buffer-in-direction)
-                ;;display-buffer-qin-direction/direction/dedicated is added in emacs27
-                ;;(direction . bottom)
-                ;;(dedicated . t) ;dedicated is supported in emacs27
-                (reusable-frames . visible)
-                (window-height . 0.3)))
+  ;; depends upon projectile and vterm
+  (use-package multi-libvterm
+    :load-path "multi-libvterm/"
+    :bind ("C-`" . multi-libvterm-dedicated-toggle))
+
 #+END_SRC
 
 * small changes
@@ -53,6 +48,8 @@
 (global-display-line-numbers-mode 1)
 (auto-save-visited-mode t)
 (setq org-src-window-setup 'current-window)
+(setq sml/no-confirm-load-theme t)
+(org-bullets-mode)
 #+END_SRC
 
 * M-x matt-reload
